src/app/components/moving-background/moving-background.component.scss
@keyframes float {
  0% { bottom: 50px }
  50% { bottom: 70px }
  100% { bottom: 50px }
}

.moving-bg-wrapper {
  background-color: black;
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.music-player {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
}

img {
  position: absolute;
  &.logo {
    bottom: -15px;
    left: 50%;
    transform: translateX(-50%);
    width: 500px;
    z-index: 3;
  }
  &.bg {
    width: 100%;
    height: 100%;
    scale: 105%;
  }
  &.ahri {
    height: 70vh;
    bottom: 0;
    left: 0;
    transform: translateX(-20%) rotateY(180deg);
  }
  &.kayle {
    height: 90vh;
    bottom: 50px;
    left: 50%;
    animation: float 6s ease-in-out infinite;
    filter: brightness(85%);
    transform: translateX(-60%);
  }
  &.ryze {
    height: 70vh;
    bottom: 0;
    right: 0;
    transform: translateX(20%);
  }
}

.layer1 { z-index: 2 }
.layer2 { z-index: 1 }
.layer3 { z-index: 0 }

@media screen and (max-width: 800px) {
  img {
    &.bg {
      width: auto;
      height: auto;
      &.layer1 { display: none; }
    }
    &.ahri { visibility: hidden; }
    &.ryze { visibility: hidden; }
  }
}

@media screen and (max-width: 500px) {
  img {
    &.logo { width: 100%; }
  }
}

@media screen and (max-width: 1500px), (max-height: 800px) {
  img {
    &.bg {
      &.layer2 {
        width: auto;
        height: auto;
        top: 30%;
        left: -20%;
      }
    }
  }
}

